# nexus-core

./: .gitignore  Cargo.toml  LICENSE  README.md
config/: default.toml  rules.toml
nexus-anomaly/: Cargo.toml
nexus-anomaly/src/: lib.rs
nexus-common/: Cargo.toml
nexus-common/src/: context.rs  decision.rs  error.rs  layer.rs  lib.rs  utils.rs
nexus-config/: Cargo.toml
nexus-config/src/: lib.rs  loader.rs  schema.rs  watcher.rs
nexus-control/: .gitignore  Cargo.toml  build.rs
nexus-control/assets/: index.html
nexus-control/src/: auth.rs  dashboard.rs  http.rs  lib.rs  ops.rs  server.rs  stats.rs
nexus-gateway/: Cargo.toml
nexus-gateway/assets/: demo.html
nexus-gateway/src/: alerting.rs  commands.rs  main.rs  metrics_placeholder.rs  proxy.rs  server.rs  state.rs  tls.rs
nexus-grammar/: Cargo.toml
nexus-grammar/src/: ast.rs  layer.rs  lib.rs  scanner.rs
nexus-grammar/src/html/: parser.rs
nexus-grammar/src/sql/: lexer.rs  parser.rs
nexus-lb/: Cargo.toml
nexus-lb/src/: balancer.rs  health.rs  lib.rs  upstream.rs
nexus-lex/: Cargo.toml
nexus-lex/src/: layer.rs  lib.rs  patterns.rs  scanner.rs
nexus-metrics/: Cargo.toml
nexus-metrics/examples/: demo.rs
nexus-metrics/src/: exporter.rs  lib.rs  metrics.rs  recorder.rs
nexus-ml-client/: Cargo.toml  build.rs
nexus-ml-client/src/: circuit_breaker.rs  client.rs  layer.rs  lib.rs  proto.rs  result.rs
nexus-pipeline/: Cargo.toml
nexus-pipeline/src/: builder.rs  lib.rs  metrics_placeholder.rs  pipeline.rs  run_result.rs
nexus-policy/: Cargo.toml  build.rs
nexus-policy/src/: circuit_breaker.rs  lib.rs  proto.rs
nexus-rate/: Cargo.toml
nexus-rate/src/: bucket.rs  layer.rs  lib.rs  limiter.rs  policy.rs
nexus-rules/: BUILD_COMMANDS.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  PR_DESCRIPTION.md  README.md  example-rules.toml
nexus-rules/src/: condition.rs  engine.rs  layer.rs  lib.rs  rule.rs
nexus-rules/tests/: integration_tests.rs
nexus-store/: Cargo.toml
nexus-store/src/: db.rs  lib.rs  log_writer.rs  metrics_writer.rs  rules_store.rs
nexus-store/src/migrations/: 001_init.sql
nexus-telemetry/: Cargo.toml
nexus-telemetry/src/: lib.rs
proto/: control.proto  inference.proto  policy.proto
