[package]
name        = "nexus-common"
description = "Shared types, traits, and error definitions for NexusWAF"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
bytes      = { workspace = true }
http       = { workspace = true }
async-trait = { workspace = true }
tracing    = { workspace = true }
