[package]
name        = "nexus-config"
description = "Configuration loading, validation, and hot-reload for NexusWAF"
version.workspace   = true
edition.workspace   = true
authors.workspace   = true
license.workspace   = true

[dependencies]
nexus-common = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
toml         = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
once_cell    = { workspace = true }
tokio        = { workspace = true }

[dev-dependencies]
tempfile = "3"
