[package]
name = "nexus-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "nexus-gateway"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
nexus-common = { workspace = true }
nexus-config = { workspace = true }
nexus-control = { workspace = true }
nexus-lb = { workspace = true }
nexus-metrics = { workspace = true }
nexus-pipeline = { workspace = true }
nexus-store = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
sha2 = "0.10"
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }
