[package]
name      = "nexus-grammar"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
nexus-common = { workspace = true }
nexus-config = { workspace = true }
nom          = { workspace = true }
tracing      = { workspace = true }
async-trait  = { workspace = true }
once_cell    = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
bytes   = { workspace = true }
http    = { workspace = true }
