[package]
name = "nexus-lb"
version = "0.1.0"
edition = "2021"

[dependencies]
nexus-common = { path = "../nexus-common" }
nexus-config  = { path = "../nexus-config" }
dashmap = { workspace = true }
parking_lot   = "0.12"
tokio         = { version = "1", features = ["full"] }
tracing       = "0.1"
serde         = { version = "1", features = ["derive"] }
async-trait   = "0.1"