[package]
name = "nexus-lb"
version = "0.1.0"
edition = "2021"

[dependencies]
nexus-common = { path = "../nexus-common" }
nexus-config  = { path = "../nexus-config" }
dashmap = { workspace = true }
parking_lot   = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
serde         = { workspace = true }
async-trait   = { workspace = true }
