[package]
name = "nexus-ml-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
nexus-common = { workspace = true }
nexus-config = { workspace = true }
nexus-metrics = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
http = { workspace = true }
