[package]
name = "nexus-policy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
nexus-common = { workspace = true }
nexus-config = { workspace = true }
nexus-telemetry = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
http = { workspace = true }
