[package]
name = "nexus-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
nexus-common = { workspace = true }
nexus-config = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
sqlx = { workspace = true }
influxdb2 = { version = "0.4" }
influxdb2-structmap = { version = "0.2" }

[dev-dependencies]
bytes = { workspace = true }
http = { workspace = true }
